--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-auth-library": "^6.1.4",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
